fix page delimiter visibility

--- a/app/assets/stylesheets/snippets.css.scss
+++ b/app/assets/stylesheets/snippets.css.scss
@@ -176,6 +176,14 @@ pre, textarea {
   font-family: verdana, sans-serif;
 }
 
+#snippets-table {
+  #snippets {
+    .page-delimiter {
+      display: none;
+    }
+  }
+}
+
 .snippet-showcase {
   display: table-row;
 }
